Text_Analysis/gerapy/projects/weibo/logs/weibo/film/e00a31668e0211eaae1e34f39a004e9c.log
2020-05-04 20:29:25 [scrapy.utils.log] INFO: Scrapy 1.8.0 started (bot: weibo)
2020-05-04 20:29:25 [scrapy.utils.log] INFO: Versions: lxml 4.4.2.0, libxml2 2.9.5, cssselect 1.1.0, parsel 1.5.2, w3lib 1.21.0, Twisted 18.7.0, Python 3.7.6 (tags/v3.7.6:43364a7ae0, Dec 19 2019, 00:42:30) [MSC v.1916 64 bit (AMD64)], pyOpenSSL 19.1.0 (OpenSSL 1.1.1d  10 Sep 2019), cryptography 2.8, Platform Windows-10-10.0.17134-SP0
2020-05-04 20:29:25 [scrapy.crawler] INFO: Overridden settings: {'BOT_NAME': 'weibo', 'LOG_FILE': 'logs\\weibo\\film\\e00a31668e0211eaae1e34f39a004e9c.log', 'NEWSPIDER_MODULE': 'weibo.spiders', 'SPIDER_MODULES': ['weibo.spiders']}
2020-05-04 20:29:25 [scrapy.middleware] WARNING: Disabled TelnetConsole: TELNETCONSOLE_ENABLED setting is True but required twisted modules failed to import:
Traceback (most recent call last):
  File "e:\software\python3.7.6\lib\site-packages\scrapy\extensions\telnet.py", line 15, in <module>
    from twisted.conch import manhole, telnet
  File "e:\software\python3.7.6\lib\site-packages\twisted\conch\manhole.py", line 154
    def write(self, data, async=False):
                              ^
SyntaxError: invalid syntax

2020-05-04 20:29:25 [scrapy.middleware] INFO: Enabled extensions:
['scrapy.extensions.corestats.CoreStats', 'scrapy.extensions.logstats.LogStats']
2020-05-04 20:29:28 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:52200/session {"capabilities": {"firstMatch": [{}], "alwaysMatch": {"browserName": "chrome", "platformName": "any", "goog:chromeOptions": {"extensions": [], "args": []}}}, "desiredCapabilities": {"browserName": "chrome", "version": "", "platform": "ANY", "goog:chromeOptions": {"extensions": [], "args": []}}}
2020-05-04 20:29:28 [urllib3.connectionpool] DEBUG: Starting new HTTP connection (1): 127.0.0.1:52200
2020-05-04 20:29:31 [urllib3.connectionpool] DEBUG: http://127.0.0.1:52200 "POST /session HTTP/1.1" 200 829
2020-05-04 20:29:31 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-05-04 20:29:31 [scrapy.middleware] INFO: Enabled downloader middlewares:
['scrapy.downloadermiddlewares.httpauth.HttpAuthMiddleware',
 'scrapy.downloadermiddlewares.downloadtimeout.DownloadTimeoutMiddleware',
 'scrapy.downloadermiddlewares.defaultheaders.DefaultHeadersMiddleware',
 'scrapy.downloadermiddlewares.useragent.UserAgentMiddleware',
 'scrapy.downloadermiddlewares.retry.RetryMiddleware',
 'scrapy.downloadermiddlewares.redirect.MetaRefreshMiddleware',
 'scrapy.downloadermiddlewares.httpcompression.HttpCompressionMiddleware',
 'scrapy.downloadermiddlewares.redirect.RedirectMiddleware',
 'scrapy.downloadermiddlewares.cookies.CookiesMiddleware',
 'scrapy.downloadermiddlewares.httpproxy.HttpProxyMiddleware',
 'scrapy.downloadermiddlewares.stats.DownloaderStats']
2020-05-04 20:29:31 [scrapy.middleware] INFO: Enabled spider middlewares:
['scrapy.spidermiddlewares.httperror.HttpErrorMiddleware',
 'scrapy.spidermiddlewares.offsite.OffsiteMiddleware',
 'scrapy.spidermiddlewares.referer.RefererMiddleware',
 'scrapy.spidermiddlewares.urllength.UrlLengthMiddleware',
 'scrapy.spidermiddlewares.depth.DepthMiddleware']
2020-05-04 20:29:31 [scrapy.middleware] INFO: Enabled item pipelines:
['weibo.pipelines.WeiboPipeline']
2020-05-04 20:29:31 [scrapy.core.engine] INFO: Spider opened
2020-05-04 20:29:31 [scrapy.extensions.logstats] INFO: Crawled 0 pages (at 0 pages/min), scraped 0 items (at 0 items/min)
2020-05-04 20:29:32 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://m.weibo.cn/search?containerid=100103type%3D1%26q%3D%E4%B8%8A%E6%B5%B7%E5%A0%A1%E5%9E%92> (referer: None)
2020-05-04 20:29:32 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:52200/session/eb8f2ced550590fa514af92e44d5b2b2/url {"url": "https://m.weibo.cn/search?containerid=100103type%3D1%26q%3D%E4%B8%8A%E6%B5%B7%E5%A0%A1%E5%9E%92", "sessionId": "eb8f2ced550590fa514af92e44d5b2b2"}
2020-05-04 20:29:33 [urllib3.connectionpool] DEBUG: http://127.0.0.1:52200 "POST /session/eb8f2ced550590fa514af92e44d5b2b2/url HTTP/1.1" 200 72
2020-05-04 20:29:33 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-05-04 20:29:35 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:52200/session/eb8f2ced550590fa514af92e44d5b2b2/element {"using": "xpath", "value": ".//ul[contains(@class,'nav-item') and contains(@class,'center')]/li/span[text() = '\u8bdd\u9898']", "sessionId": "eb8f2ced550590fa514af92e44d5b2b2"}
2020-05-04 20:29:35 [urllib3.connectionpool] DEBUG: http://127.0.0.1:52200 "POST /session/eb8f2ced550590fa514af92e44d5b2b2/element HTTP/1.1" 200 102
2020-05-04 20:29:35 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-05-04 20:29:35 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:52200/session/eb8f2ced550590fa514af92e44d5b2b2/element/0.5132780416694711-1/click {"id": "0.5132780416694711-1", "sessionId": "eb8f2ced550590fa514af92e44d5b2b2"}
2020-05-04 20:29:35 [urllib3.connectionpool] DEBUG: http://127.0.0.1:52200 "POST /session/eb8f2ced550590fa514af92e44d5b2b2/element/0.5132780416694711-1/click HTTP/1.1" 200 72
2020-05-04 20:29:35 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-05-04 20:29:37 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:52200/session/eb8f2ced550590fa514af92e44d5b2b2/execute {"script": "var q=document.documentElement.scrollTop=100000", "args": [], "sessionId": "eb8f2ced550590fa514af92e44d5b2b2"}
2020-05-04 20:29:41 [urllib3.connectionpool] DEBUG: http://127.0.0.1:52200 "POST /session/eb8f2ced550590fa514af92e44d5b2b2/execute HTTP/1.1" 200 268
2020-05-04 20:29:41 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-05-04 20:29:41 [scrapy.core.scraper] ERROR: Spider error processing <GET https://m.weibo.cn/search?containerid=100103type%3D1%26q%3D%E4%B8%8A%E6%B5%B7%E5%A0%A1%E5%9E%92> (referer: None)
Traceback (most recent call last):
  File "e:\software\python3.7.6\lib\site-packages\twisted\internet\defer.py", line 654, in _runCallbacks
    current.result = callback(current.result, *args, **kw)
  File "F:\GitHubCode\Code\Python\Django\Text_Analysis\gerapy\projects\weibo\weibo\spiders\film.py", line 46, in parse
    self.web.execute_script(js)
  File "e:\software\python3.7.6\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 636, in execute_script
    'args': converted_args})['value']
  File "e:\software\python3.7.6\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 321, in execute
    self.error_handler.check_response(response)
  File "e:\software\python3.7.6\lib\site-packages\selenium\webdriver\remote\errorhandler.py", line 242, in check_response
    raise exception_class(message, screen, stacktrace)
selenium.common.exceptions.WebDriverException: Message: chrome not reachable
  (Session info: chrome=72.0.3626.121)
  (Driver info: chromedriver=2.38.552522 (437e6fbedfa8762dec75e2c5b3ddb86763dc9dcb),platform=Windows NT 10.0.17134 x86_64)

2020-05-04 20:29:41 [scrapy.core.engine] INFO: Closing spider (finished)
2020-05-04 20:29:41 [scrapy.statscollectors] INFO: Dumping Scrapy stats:
{'downloader/request_bytes': 285,
 'downloader/request_count': 1,
 'downloader/request_method_count/GET': 1,
 'downloader/response_bytes': 3721,
 'downloader/response_count': 1,
 'downloader/response_status_count/200': 1,
 'elapsed_time_seconds': 9.513591,
 'finish_reason': 'finished',
 'finish_time': datetime.datetime(2020, 5, 4, 12, 29, 41, 387111),
 'log_count/DEBUG': 17,
 'log_count/ERROR': 1,
 'log_count/INFO': 8,
 'log_count/WARNING': 1,
 'response_received_count': 1,
 'scheduler/dequeued': 1,
 'scheduler/dequeued/memory': 1,
 'scheduler/enqueued': 1,
 'scheduler/enqueued/memory': 1,
 'spider_exceptions/WebDriverException': 1,
 'start_time': datetime.datetime(2020, 5, 4, 12, 29, 31, 873520)}
2020-05-04 20:29:41 [scrapy.core.engine] INFO: Spider closed (finished)
